# slg-ai-agents

./: .bandit-baseline.json  .gitattributes  .gitignore  .secrets.baseline  AGP-CONFORMANCE.md  AWS-RUN-COST.md  BRAND-AND-TRADEMARK.md  CHANGELOG.md  CONTRIBUTING.md  DO-NOT-CLAIM.md  ENTERPRISE-PLATFORM.md  GATEWAY-MODES.md  IMPROVEMENTS-OVER-EDU-HCLS.md  LICENSE  MATURITY.yaml  Makefile  NOT-CLAIMS.md  OPERATING-MODEL.md  README.md  RELEASE-PACKET.md  RETENTION-MODES.md  SECURITY-CI.md  SECURITY.md  SLG-03-Permitting-Licensing-Customer-Deck.pptx  SLG-05-Public-Records-FOIA-Customer-Deck.pptx  SLG-06-Procurement-Grants-Customer-Deck.pptx  SLG-07-GovOps-Service-Desk-Customer-Deck.pptx  SLG-Agentic-AI-Suite-Executive-Overview.pptx  SLG-WoG-Orchestration-Platform-Deck.pptx  SOURCES.md  SUITE-STATUS.md  conftest.py  pytest.ini
platform_core/: pyproject.toml  requirements-lock.txt
platform_core/slg_agent_platform/: __init__.py  auth.py  budget.py  jwt_verify.py  llm_factory.py  pii.py  reasoning.py  secrets.py  tracing.py
platform_core/slg_agent_platform/a2a/: __init__.py  supervisor.py
platform_core/slg_agent_platform/connectors/: __init__.py  base.py  factory.py  live.py  (+2 more)
platform_core/tests/: test_a2a.py  test_agp_conformance.py  test_audit_append_only.py  test_budget.py  test_connector_gateway.py  test_connectors.py  test_jwt_verify.py  test_kb_retrieval.py  test_mcp_gateway.py  test_pii.py  test_policy.py  test_reasoning.py  test_reviewer_service.py  test_tokens.py  test_workflow_311_governed.py  test_workflow_agents_governed.py  test_workflow_agents_retrieval.py
(+539 files in other folders)
