[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slg-agent-platform"
version = "0.1.0"
description = "Governed platform core for the SLG AI Agent Suite (MCP authorization gateway, PII/CJI/FTI masker, LLM factory, connectors, A2A supervisor)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
bedrock = ["langchain-aws>=0.2", "boto3>=1.34"]
anthropic = ["langchain-anthropic>=0.2"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["slg_agent_platform*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
